app/src/Components/DisplayCards/DisplayCards.css
.card-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  padding: 1rem;
}

.pagination-container {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  padding: 1rem;
}

.pagination-container h4 {
  font-size: 0.75rem;
  margin-top: 0.3rem;
  margin-right: .2rem;
}

.pagination-btn {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  list-style: none;
  margin-right: 8rem;
  padding: 0;
}

/* Makes the pagination buttons responsive they 
  will center when screen is less than 767px */
@media screen and (max-width: 767px) {
  .pagination-container {
    justify-content: center;
  }
  .pagination-btn {
    justify-content: center;
    margin-right: 0rem;
  }
}

.pagination-btn a {
  color: black;
  font-weight: 600;
  text-decoration: none;
  background-color: #ED1B24;
  margin: .2rem;
  padding: 0.5rem 0.75rem;
  border-radius: 0.4rem;
}

.pagination-btn a:hover {
  color: white;
  font-weight: 800;
}

.page-num-btn, .break-btn {
  display: none;
}

